<resources>
    <string name="app_name">MysteryMessage</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_notification_channel_id">MESSENGER_ID_DEFAULT</string>
    <string name="message_denied">You was not allow this app showing notification.</string>
    <string name="mesg_permission_prompt">You need accept this permission to see notification showing.</string>
    <string name="msg_permission_denied">You was not allow this app showing notification.</string>
    <string name="hint_text_username">Your username</string>
    <string name="hint_text_password">Your password</string>
    <string name="action_register">Register</string>
    <string name="action_login">Login</string>
    <string name="des_avatar_image">Avatar image</string>
    <string name="title_select_avatar">Select Your Avatar:</string>
    <string name="hint_text_register_username">Your Username</string>
    <string name="hint_text_register_email">Your Email</string>
    <string name="hint_text_display_name">Your Display Name</string>
    <string name="hint_text_register_password">Your Password</string>
    <string name="hint_text_confirm_password">Confirm Your Password</string>
    <string name="action_cancel">Cancel</string>
    <string name="error_username">Username must contains at least 3 characters long</string>
    <string name="error_display_name">Display name cannot be empty</string>
    <string name="error_email">Incorrect email format</string>
    <string name="error_password">Password must contains at least 6 characters long</string>
    <string name="error_confirm_password">Confirm password mismatch</string>
    <string name="error_avatar">You must pick your avatar first</string>
    <string name="message_per_prompt">Permisson must allow</string>
    <string name="title_home">Home</string>
    <string name="tile_register">Register</string>
    <string name="title_setting">Settings</string>
    <string name="tile_call">Call</string>
    <string name="title_phone_book">PhoneBook</string>
    <string name="email_blank">Email is not Blank</string>
    <string name="email_not_valid">Email is not Valid</string>
    <string name="user_name_blank">User name not blank</string>
    <string name="password_blank">Password is not blank</string>
    <string name="password_not_match">Confirm password not match</string>
    <string name="image_null">Must select avatar</string>
    <string name="content_small_avt">Small Avt</string>
    <string name="chat_categories_all_chat">All chats</string>
    <string name="chat_categories_personal">Personal</string>
    <string name="chat_categories_work">Work</string>
    <string name="chat_categories_groups">Groups</string>
    <string name="text_search">Search</string>
    <string name="storage_and_data"><![CDATA[Storage & Data]]></string>
    <string name="privacy">Privacy</string>
    <string name="appearance">Appearance</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="general">General</string>
    <string name="request_friend">Friend Request</string>
    <string name="friends">Friends</string>
    <string name="text_btn_cancel">Cancel</string>
    <string name="text_btn_accept">Accept</string>
    <string name="timed_box">Timed Box</string>
    <string name="hint_enter_your_question">Enter Your Question</string>
    <string name="question">Question:</string>
    <string name="secret_message">Secret Message</string>
    <string name="answer">Answer:</string>
    <string name="hint_enter_your_answer_here">Enter your answer here...</string>
    <string name="next">Next</string>
    <string name="your_answer">Your answer</string>
    <string name="submit">Submit</string>
    <string name="title_answer_message">Answer Secret Message</string>
    <string name="title_secret_message_detail">Your Secret Message</string>
    <string name="close">Close</string>
    <string name="submit_question">Submit Question</string>
    <string name="message_send_message">Are you sure you want to send this message?</string>
    <string name="title_send_message">Send Secret Message</string>
    <string name="button_send">Send</string>
    <string name="button_cancel">Cancel</string>
    <string name="quiz_question">Quiz Question</string>
    <string name="enter_your_question_here">Enter your question here</string>
    <string name="options">Options</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="btn_message_canceled">Canceled</string>
    <string name="btn_message_sent">Sent</string>
    <string name="btn_message_schedule">Scheduled</string>
    <string name ="message_title">Title: %s</string>
    <string name ="message_sendTime">Time Send: %s</string>
    <string name ="message_sendTo">To: %s</string>
<string name="title_box_time">Box Time</string>
<string name="title_letter_to_you">Letter to you</string>
<string name="title_friend">Friend</string>
    <string name="message_sender_name">From:%s</string>
</resources>