<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@android:color/white">

    <!-- Icon + Tiêu đề -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/incognito"
            app:tint="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secret_message"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <!-- Recipient Input -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textSize="14sp"
        android:textStyle="bold"
        android:paddingBottom="4dp"/>

    <EditText
        android:id="@+id/ed_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_border"
        android:drawablePadding="8dp"
        android:hint="@string/hint_enter_your_question"

        android:minHeight="48dp"
        android:padding="12dp"
        android:textSize="14sp" />

    <!-- Message Input -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        android:textSize="14sp"
        android:textStyle="bold"
        android:paddingTop="16dp"
        android:paddingBottom="4dp"/>

    <EditText
        android:id="@+id/ed_answer"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:hint="@string/hint_enter_your_answer_here"
        android:background="@drawable/edittext_border"

        android:padding="12dp"
        android:textSize="14sp"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:minLines="4"
        android:maxLines="6"/>

    <!-- Nút Next -->
    <Button
        style="@style/CustomButtonStyle"
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:background="@drawable/bg_bottom_sheet"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="24dp"/>

</LinearLayout>
