<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <!-- Ảnh đại diện -->
    <androidx.cardview.widget.CardView
        android:id="@+id/profile_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Ảnh đại diện -->
            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/circle_bg"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Tên người dùng -->
            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Daniel"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/user_phone"
                app:layout_constraintStart_toEndOf="@id/profile_image"
                app:layout_constraintTop_toTopOf="@id/profile_image" />

            <!-- Số điện thoại -->
            <TextView
                android:id="@+id/user_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+14844578842"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/profile_image"
                app:layout_constraintStart_toStartOf="@id/user_name"
                app:layout_constraintTop_toBottomOf="@id/user_name" />

            <!-- Nút Edit -->
            <Button
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_button"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:text="Edit"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/profile_image" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <!-- Tiêu đề General -->
    <TextView
        android:id="@+id/general_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/general"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_card"
      />

    <!-- Menu danh sách -->
    <LinearLayout
        android:id="@+id/menu_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/general_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/notifications"
            style="@style/MenuItem"
            android:text="@string/notifications"
            app:drawableStartCompat="@drawable/notification" />

        <TextView
            android:id="@+id/appearance"
            style="@style/MenuItem"
            android:text="@string/appearance"
            app:drawableStartCompat="@drawable/night_mode" />

        <TextView
            android:id="@+id/privacy"
            style="@style/MenuItem"
            android:text="@string/privacy"
            app:drawableStartCompat="@drawable/insurance" />

        <TextView
            android:id="@+id/storage"
            style="@style/MenuItem"
            android:text="@string/storage_and_data"
            app:drawableStartCompat="@drawable/storage" />

        <TextView
            android:id="@+id/about"
            style="@style/MenuItem"
            android:text="@string/about"
            app:drawableStartCompat="@drawable/information_button" />
        <TextView
            android:id="@+id/logout"
            style="@style/MenuItem"
            android:text="@string/logout"
            app:drawableStartCompat="@drawable/logout" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
