<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="wrap_content">

    <!-- Quiz Question Label -->
    <TextView
        android:id="@+id/tv_question_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/quiz_question"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Quiz Question Input -->
    <EditText
        android:id="@+id/et_quiz_question"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:hint="@string/enter_your_question_here"
        android:padding="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_question_label"
        tools:ignore="DuplicateSpeakableTextCheck,TextFields,VisualLintTextFieldSize,VisualLintOverlap" />

    <!-- Options Title -->
    <TextView
        android:id="@+id/tv_options_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/options"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_quiz_question" />

    <!-- RadioGroup for options -->
    <RadioGroup
        android:id="@+id/rg_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_options_label">

        <!-- Option 1 RadioButton -->
        <RadioButton
            android:id="@+id/rb_option_1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:buttonTint="@color/custom_radio_color"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <!-- Option 2 RadioButton -->
        <RadioButton
            android:id="@+id/rb_option_2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:buttonTint="@color/custom_radio_color"

            android:layout_marginBottom="8dp" />

        <!-- Option 3 RadioButton -->
        <RadioButton
            android:id="@+id/rb_option_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/custom_radio_color"

            android:layout_marginBottom="8dp" />

        <!-- Option 4 RadioButton -->
        <RadioButton
            android:id="@+id/rb_option_4"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:buttonTint="@color/custom_radio_color"


            android:checked="false" />
    </RadioGroup>

    <!-- Option 1 EditText -->
    <!-- Quiz Question Input -->
    <TextView
        android:id="@+id/tv_quiz_question"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:padding="12dp"
        android:text="@string/enter_your_question_here"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_question_label" />

    <!-- Option 1 TextView -->
    <TextView
        android:id="@+id/tv_option_1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:padding="12dp"
        android:text="@string/option_1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rg_options"
        app:layout_constraintTop_toTopOf="@id/rg_options" />

    <!-- Option 2 TextView -->
    <TextView
        android:id="@+id/tv_option_2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:padding="12dp"
        android:text="@string/option_2"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rg_options"
        app:layout_constraintTop_toBottomOf="@id/tv_option_1" />

    <!-- Option 3 TextView -->
    <TextView
        android:id="@+id/tv_option_3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:padding="12dp"
        android:text="@string/option_3"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rg_options"
        app:layout_constraintTop_toBottomOf="@id/tv_option_2" />

    <!-- Option 4 TextView -->
    <TextView
        android:id="@+id/tv_option_4"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:padding="12dp"
        android:text="@string/option_4"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rg_options"
        app:layout_constraintTop_toBottomOf="@id/tv_option_3" />


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="0dp"
        style="@style/CustomButtonStyle"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:text="@string/submit"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_option_4"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>
