<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
        android:layout_height="wrap_content">

        <!-- Quiz Question Label -->
    <TextView
        android:id="@+id/tv_question_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/quiz_question"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <!-- Quiz Question Input -->
    <EditText
        android:id="@+id/et_quiz_question"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/enter_your_question_here"
        android:importantForAutofill="no"
        android:padding="12dp"
        android:textColorHint="#757575"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_question_label"
        tools:ignore="TextFields,VisualLintTextFieldSize" />

        <!-- Options Title -->
    <TextView
        android:id="@+id/tv_options_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/options"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_quiz_question" />

        <!-- RadioGroup for options -->
    <RadioGroup
        android:id="@+id/rg_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:importantForAutofill="no"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_options_label">

        <!-- Option 1 RadioButton -->
        <RadioButton
            android:id="@+id/rb_option_1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:buttonTint="@color/custom_radio_color"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <!-- Option 2 RadioButton -->
        <RadioButton
            android:id="@+id/rb_option_2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:buttonTint="@color/custom_radio_color"

            android:layout_marginBottom="8dp" />

        <!-- Option 3 RadioButton -->
        <RadioButton
            android:id="@+id/rb_option_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/custom_radio_color"

            android:layout_marginBottom="8dp" />

        <!-- Option 4 RadioButton -->
        <RadioButton
            android:id="@+id/rb_option_4"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:buttonTint="@color/custom_radio_color"


            android:checked="false" />
    </RadioGroup>

        <!-- Option 1 EditText -->
    <EditText
        android:id="@+id/et_option_1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/option_1"
        android:importantForAutofill="no"
        android:padding="12dp"
        android:textColorHint="#757575"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rg_options"
        app:layout_constraintTop_toTopOf="@id/rg_options"
        tools:ignore="TextFields,VisualLintTextFieldSize" />

        <!-- Option 2 EditText -->
    <EditText
        android:id="@+id/et_option_2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/option_2"
        android:padding="12dp"
        android:textColorHint="#757575"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rg_options"
        app:layout_constraintTop_toBottomOf="@id/et_option_1"
        tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

        <!-- Option 3 EditText -->

    <!-- Option 4 EditText -->

    <!-- Submit Button -->
    <EditText
        android:id="@+id/et_option_3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:hint="@string/option_3"
        android:importantForAutofill="no"
        android:padding="12dp"
        android:textColorHint="#757575"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/rg_options"
        app:layout_constraintTop_toBottomOf="@id/et_option_2"
        tools:ignore="TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/et_option_4"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/option_4"
        android:padding="12dp"
        android:textColorHint="#757575"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/rg_options"
        app:layout_constraintTop_toBottomOf="@id/et_option_3"
        tools:ignore="TextFields,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="0dp"
        style="@style/CustomButtonStyle"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:text="@string/submit_question"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_option_4"
        tools:ignore="VisualLintButtonSize" />

    </androidx.constraintlayout.widget.ConstraintLayout>
