<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/tvSecurityCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secret_message"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Answer this question to continue"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@android:color/holo_blue_light"
        app:boxBackgroundMode="outline"
        app:hintTextColor="@color/black"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_answer"
            android:padding="10dp"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:backgroundTint="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_marginTop="20dp"/>
</LinearLayout>
